# aoc-2022

./: aoc-haskell-th.cabal  readme.md
input/: input-goes-here
src/: Aoc.hs  Main.hs
src/Utils/: Parsers.hs  Utils.hs
