cabal-version:      2.4
name:               aoc-haskell-th
version:            0.1.0.0

author:             Alex Dixon
maintainer:         alex@dixonary.co.uk

executable aoc
    main-is:          Main.hs

    build-depends:
        base ^>=4.17.0.0,
        template-haskell,
        witch,
        containers,
        split,
        string-interpolate
        
    other-modules:
        Aoc

    hs-source-dirs:   src
    default-language: Haskell2010

    default-extensions:
        TemplateHaskell,
        QuasiQuotes,
        OverloadedStrings, 
        OverloadedLists,
        LambdaCase,
        RecordWildCards,
        TupleSections,
        ScopedTypeVariables,
        TypeApplications,
        FlexibleContexts,
        ExistentialQuantification,
        FlexibleInstances,
        MultiParamTypeClasses,
        UndecidableInstances,
        MonoLocalBinds
